@@ -23,3 +23,4 @@ Added --incomplete-data option to genetic algorithm
 Added support for incremental record linkage (plus 1.3 methods)
 Let genetic algorithm use custom comparators from config (ztsmith)
 Split-on property not included in genetic output (ztsmith)
+MongoDB data source (antonimmo)
